# oxide-screening-uncertainty

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  descriptors.yaml  ranking.yaml  training.yaml
src/oxide_screening/: __init__.py
src/oxide_screening/utils/: config.py  paths.py
tests/: test_package_import.py
