[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxide-screening-uncertainty"
version = "0.1.0"
description = "Physics-audited uncertainty ranking for perovskite oxide screening."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mufeed Keenari" }
]
license = { text = "MIT" }
keywords = [
    "materials-informatics",
    "perovskite-oxides",
    "uncertainty-quantification",
    "machine-learning",
    "materials-project"
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "pymatgen>=2024.1",
    "mp-api>=0.40"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "black>=24.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []